Relations implemented, bugs fixed, feedbacks is updated